[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "vision-toolbox"
version = "0.0.1"
description = "Lightweight vision utilities for Python"
readme = "README.md"
requires-python = ">=3.9.6"
license = { text = "MIT" }
authors = [{ name = "aurlau" }]
dependencies = ["numpy>=1.23"]

[project.urls]
Homepage = "https://github.com/aurlau/visiooolbox"

[project.optional-dependencies]
dev = [ "pytest>=7.0", "pytest-cov", "mypy>=1.6", "ruff>=0.4.0", "black>=24.0.0", "isort>=5.13.0", "pre-commit>=3.6.0", "build>=1.0.0" ]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = false

[tool.hatch.build.targets.wheel]
packages = ["src/vision_toolbox"]